# OOP-2022

Adder/: Adder.cpp  Adder.hpp  CMakeLists.txt  FileIO.cpp  FileIO.hpp  Number.cpp  Number.hpp  StreamIO.cpp  input.txt  main.cpp  output.txt
Adder/Adder/: CMakeLists.txt  Number.cpp  StreamIO.cpp  StreamIO.hpp  main.cpp
ChatBots/: Boy.c  Boy.h  CMakeLists.txt  ChatArray.c  ChatArray.h  CowardGirl.c  CowardGirl.h  DArray.c  Girl.c  Girl.h  New.c  New.h  Parser.c  Parser.h  RichBoy.c  RichBoy.h  User.c  User.h  bot.c  bot.h  boy.c  boy.h  cowardGirl.c  cowardGirl.h  darray.c  darray.h  girl.c  girl.h  main.c  message.c  message.h  new.c  new.h  peoples.txt  richBoy.c  richBoy.h  user.c  user.h
DijkstraAlgorithm/: CMakeLists.txt  Edge.hpp  Graph.cpp  Graph.hpp  ShortestWay.hpp  StreamIO.cpp  StreamIO.hpp  input.txt  main.cpp
DijkstraAlgorithm/DijkstraAlgorithm/: Edge.hpp  Graph.cpp  Graph.hpp  (+4 more)
Image/: CMakeLists.txt  Image.cpp  Image.hpp  Range.cpp  Range.hpp  Test Results - Google_Tests_run.html  main.cpp  test.cpp
LinkedList/: CMakeLists.txt  WorkVersion.c  main.c  slist.h  slitst.c
Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  main.cpp
RotationBMP/: BitmapPlusPlus.hpp  CMakeLists.txt  ImageModificator.cpp  ImageModificator.hpp  main.cpp
WhoWhereWas/: Coordinates.hpp  Placement.hpp  PlacementDictionary.cpp  main.cpp  places.txt  users.txt
WhoWhereWas/WhoWhereWas/: CMakeLists.txt  Coordinates.hpp  Placement.hpp  PlacementDictionary.cpp  PlacementDictionary.hpp  StreamIO.cpp  StreamIO.hpp  TimeOrderedCoordinates.hpp  UserCoordinates.hpp  main.cpp
(+19 files in other folders)
